@@ -43,6 +43,7 @@ v5.3.0.0
 - Fixed fireworks leaving blocks behind
 - Fixed an error where /rankmsg wouldn't send the whole message, only the first word.
 - Waypoints are now saved
+- Hard-Coded command permissions are now editable (GUI and a seperate .properties file)
 
 v5.2.0.0
 - Fixed the server-breaking freeze bug that happened when a player lagged (NOT logged) out.
